<resources>

    <string name="app_name">Faceplant</string>
    <string name="the_ultimate_gardentool">The ultimate gardentool</string>
    <string name="title_sign_in">Sign in</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out_button">Sign out</string>
    <string name="sign_in_later">Sign in later</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="hint_username">Username</string>
    <string name="email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Confirm password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="reset_password">Reset your password</string>
    <string name="submit">Submit</string>
    <string name="enter_email_to_reset_password">Enter your Email address
        and we\'ll send you a link to reset your password </string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="or">or</string>

    <!--Navigation menu-->
    <string name="navigation_menu_MyPlants">My Plants</string>
    <string name="navigation_menu_MySeeds">My Seeds</string>
    <string name="navigation_menu_Profile">Profile</string>
    <string name="navigation_menu_PlantCare">Plant care</string>


    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="message_enter_username">Please enter your username</string>
    <string name="message_enter_email">Please enter your Email ID</string>
    <string name="message_invalid_email">Invalid Email ID</string>
    <string name="message_enter_password">Please enter your password</string>
    <string name="message_confirm_password">Please confirm your password</string>
    <string name="message_password_mismatched">Password do not match</string>
    <string name="message_registered_successfully">You are registered successfully</string>
    <string name="email_id">email id</string>
    <string name="user_id">user id</string>
    <string name="message_check_your_email">"An email has been sent to your email address.
        Follow the instructions to reset your password "</string>

    <string name="profile">Profile</string>
    <string name="location">Location</string>
    <string name="bio">Bio</string>
    <string name="textView_username">Username:</string>
    <string name="textView_email">Email:</string>
    <string name="edit_profile">Edit profile</string>
    <string name="message_access_to_storage_denied">Access to storage denied</string>
    <string name="message_image_not_selected">Image selection failed!</string>
    <string name="message_registation_failed">Registration failed!</string>
    <string name="file_uploaded_successfully">File uploaded successfully!</string>
    <string name="message_image_selection_failed">Image selection failed!</string>
    <string name="my_plants">My plants</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="plant_type">Plant type</string>
    <string name="date_of_purchase">Date of purchase</string>
    <string name="plant_health">Plant health</string>
    <string name="more_about_plant">Tell more about your plant</string>
    <string name="save">Save</string>
    <string name="new_plant">New plant</string>
    <string name="cancel">Cancel</string>
    <string name="my_plant">My plant</string>
    <string name="update">Update</string>
    <string name="romove">Remove</string>
    <string name="message_enter_plant_type">Please enter a plant type.</string>


    <!--PlantCare strings-->
    <string name="plantcare_title">Plant Care</string>
    <string name="plantcare_hint_search">Search</string>
    <string name="plantcare_description">
       Click one of the icons below to read more about how to take proper care of this plant</string>
    <string name="plantcare_icontext_light">Light</string>
    <string name="plantcare_icontext_water">Water</string>
    <string name="plantcare_icontext_nutritions">Nutrition</string>
    <string name="plantcare_icontext_genreal_info">General Info:</string>
    <string name="Plantcare_lightActivity_title">Required light:</string>
    <string name="Plantcare_waterActivity_title">How to water:</string>
    <string name="Plantcare_nutritionActivity_title">Nutrition:</string>
    <string name="Plantcare_GenralinfoActivity_title">About:</string>
    <string name="plantcare_item_title">PlantTitle</string>
    <string name="plantcarePofile_title">Title</string>

    <!--topBar strings-->
    <string name="topbar_title">topbartitle?</string>
    <string name="topbar_description">topbardescription?</string>
    <string name="content_description">image</string>
    <string name="no_plants_added">No plant added yet.</string>
    <string name="remove_dialog_title">Remove</string>
    <string name="remove_dialog_message">Are you sure you want to remove the item?</string>
    <string name="remove_dialog_message_plant">Are you sure you want to remove the plant?</string>
    <string name="remove_dialog_message_seed">Are you sure you want to remove the seed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="message_you_can_edit_now">You can edit plant details now!</string>

    <string name="my_seeds">My seeds</string>
    <string name="no_seeds_added">No seeds added yet.</string>
    <string name="seeds_item">Seeds item</string>
    <string name="new_seed">New seed</string>
    <string name="seed_type">Seed type</string>
    <string name="more_about_seed">Tell more about seed</string>
    <string name="message_enter_seed_type">Please enter seed type</string>
    <string name="update_plant">Update plant</string>
    <string name="select_image_dialog_title">Select an image</string>
    <string name="update_seed">Update seeds</string>
    <string name="message_choose_plant_image">Please choose a plant image!</string>
    <string name="message_plant_type_is_long">Plant type is too long!</string>
    <string name="message_seed_type_is_long">Seed type is too long!</string>
    <string name="sign_in_to_continue_title">Locked feature!</string>
    <string name="message_sign_in_to_continue">Please sign in to continue using other features.</string>


</resources>