<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".activities.ResetPasswordActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="@dimen/app_name_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reset_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/reset_password"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/reset_password_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_name" />


    <TextView
        android:id="@+id/reset_password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/enter_email_to_reset_password"
        android:textColor="@color/et_text_color"
        android:textSize="@dimen/content_text_size"
        app:layout_constraintBottom_toTopOf="@+id/forgot_password_emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_title" />

    <EditText
        android:id="@+id/forgot_password_emailEditText"
        style="@style/FaceplantEditText"
        android:layout_marginTop="60dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/email"
        android:textColorHint="@color/et_hint_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_text" />

    <com.example.faceplant.utils.FaceplantButton
        android:id="@+id/submit_button"
        style="@style/FaceplantButton"
        android:layout_marginTop="40dp"
        android:background="@drawable/faceplant_blue_button"
        android:text="@string/submit"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password_emailEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>