<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".activities.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/app_name_text_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sign_up_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text_size"
                app:layout_constraintBottom_toTopOf="@+id/text_input_layout_plantType"
                app:layout_constraintStart_toStartOf="@+id/text_input_layout_plantType"
                app:layout_constraintTop_toBottomOf="@+id/app_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_plantType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editText_margin"
                android:layout_marginEnd="@dimen/editText_margin"
                android:padding="@dimen/editText_padding"
                android:hint="@string/hint_username"
                android:textColorHint="@color/et_hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_title">

                <EditText
                    android:id="@+id/view_plant_plantTypeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/et_text_color"
                    android:background="@drawable/edittext_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_plantDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editText_margin"
                android:layout_marginEnd="@dimen/editText_margin"
                android:padding="@dimen/editText_padding"
                android:hint="@string/email"
                android:textColorHint="@color/et_hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_plantType">

                <EditText
                    android:id="@+id/view_plant_plantDateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/et_text_color"
                    android:background="@drawable/edittext_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_plantHealth"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editText_margin"
                android:layout_marginEnd="@dimen/editText_margin"
                android:padding="@dimen/editText_padding"
                android:hint="@string/hint_password"
                android:textColorHint="@color/et_hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_plantDate">

                <EditText
                    android:id="@+id/add_plant_plantHealthEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/et_text_color"
                    android:background="@drawable/edittext_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_moreAboutPlant"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editText_margin"
                android:layout_marginEnd="@dimen/editText_margin"
                android:padding="@dimen/editText_padding"
                android:hint="@string/hint_repeat_password"
                android:textColorHint="@color/et_hint_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_plantHealth">

                <EditText
                    android:id="@+id/add_plant_moreAboutEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/et_text_color"
                    android:background="@drawable/edittext_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.faceplant.utils.FaceplantButton
                android:id="@+id/add_plant_saveButton"
                style="@style/FaceplantButton"
                android:layout_marginTop="20dp"
                android:background="@drawable/faceplant_blue_button"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_moreAboutPlant" />

            <TextView
                android:id="@+id/alreade_have_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/already_have_account"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/sign_in_text"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_plant_saveButton" />

            <TextView
                android:id="@+id/sign_in_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/purple_700"
                app:layout_constraintBottom_toBottomOf="@+id/alreade_have_account"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/alreade_have_account"
                app:layout_constraintTop_toBottomOf="@+id/add_plant_saveButton" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>