<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".activities.plantCare.PlantCareProfileActivity">

    <!--Textview that represents the top title-->
    <TextView
        android:id="@+id/plantcare_profile_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/plantcarePofile_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/plantcare_profile_imageview"
        app:layout_constraintStart_toStartOf="@id/plantcare_profile_imageview"
        app:layout_constraintTop_toTopOf="parent"/>


    <!--Image of the plant,fetched from firestore-->
    <ImageView
        android:id="@+id/plantcare_profile_imageview"
        android:layout_width="201dp"
        android:layout_height="135dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plantcare_profile_title_textview"
        tools:srcCompat="@drawable/defaultplant"
        android:scaleType="fitCenter">
    </ImageView>



    <!--textview to display description-->
    <TextView
        android:id="@+id/plantcare_profile_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plantcare_description"
        android:textSize="15sp"
        android:textStyle="italic"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/plantcare_profile_imageview">
    </TextView>


    <!-- clickable icon light -->
    <ImageView
        android:id="@+id/plantcare_profile_lighticon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/plantcare_profile_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/plantcare_profile_watericon"
        app:layout_constraintBottom_toTopOf="@id/plantcare_profile_nutritionicon"
        android:src="@drawable/ic_sunlight"
        >

    </ImageView>

    <!--text under clickable icon light-->
    <TextView
        android:id="@+id/plantcare_profile_icontext_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:text="@string/plantcare_icontext_light"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/plantcare_profile_lighticon"
        app:layout_constraintStart_toStartOf="@id/plantcare_profile_lighticon"
        app:layout_constraintTop_toBottomOf="@id/plantcare_profile_lighticon">

    </TextView>

    <!--clickable icon water-->
    <ImageView
        android:id="@+id/plantcare_profile_watericon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/plantcare_profile_lighticon"
        app:layout_constraintTop_toTopOf="@+id/plantcare_profile_lighticon"
        app:layout_constraintBottom_toBottomOf="@id/plantcare_profile_lighticon"
        android:src="@drawable/ic_waterdrop_white">

    </ImageView>

    <!--text under clickable icon water-->
    <TextView
        android:id="@+id/plantcare_profile_icontext_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:textSize="15sp"
        android:text="@string/plantcare_icontext_water"
        app:layout_constraintEnd_toEndOf="@id/plantcare_profile_watericon"
        app:layout_constraintStart_toStartOf="@id/plantcare_profile_watericon"
        app:layout_constraintTop_toBottomOf="@id/plantcare_profile_watericon">

    </TextView>

    <!--clickable icon nutrition-->
    <ImageView
        android:id="@+id/plantcare_profile_nutritionicon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="@id/plantcare_profile_lighticon"
        app:layout_constraintTop_toBottomOf="@id/plantcare_profile_icontext_light"
        app:layout_constraintEnd_toEndOf="@id/plantcare_profile_lighticon"
        android:src="@drawable/ic_nutrition_icon">

    </ImageView>

    <!--text under clickable icon nutrition-->
    <TextView
        android:id="@+id/plantcare_profile_icontext_nutrition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:textSize="15sp"
        android:text="@string/plantcare_icontext_nutritions"
        app:layout_constraintEnd_toEndOf="@id/plantcare_profile_nutritionicon"
        app:layout_constraintStart_toStartOf="@id/plantcare_profile_nutritionicon"
        app:layout_constraintTop_toBottomOf="@id/plantcare_profile_nutritionicon"></TextView>

    <!--clickable icon general info-->
    <ImageView
        android:id="@+id/plantcare_profile_genralinfo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="@id/plantcare_profile_nutritionicon"
        app:layout_constraintBottom_toBottomOf="@id/plantcare_profile_nutritionicon"
        app:layout_constraintTop_toBottomOf="@id/plantcare_profile_icontext_water"
        app:layout_constraintEnd_toEndOf="@id/plantcare_profile_watericon"
        android:src="@drawable/ic_infosymbol">
    </ImageView>

    <!--text under clickable icon general info-->
    <TextView
        android:id="@+id/plantcare_profile_icontext_generalinfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="7dp"
        android:textSize="15sp"
        android:text="@string/plantcare_icontext_genreal_info"
        app:layout_constraintEnd_toEndOf="@id/plantcare_profile_genralinfo"
        app:layout_constraintStart_toStartOf="@id/plantcare_profile_genralinfo"
        app:layout_constraintTop_toBottomOf="@id/plantcare_profile_genralinfo">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>
