<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".activities.MySeeds.AddSeedActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_add_seed_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:gravity="center"
            android:text="@string/new_seed"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold"
            android:paddingLeft="-65dp"
            android:paddingRight="0dp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_add_seed_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_seedType"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editText_margin"
                android:layout_marginEnd="@dimen/editText_margin"
                android:padding="@dimen/editText_padding"
                android:hint="@string/seed_type"
                android:textColorHint="@color/et_hint_color"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/view_seed_seedTypeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/et_text_color"
                    android:background="@drawable/edittext_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_seedDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editText_margin"
                android:layout_marginEnd="@dimen/editText_margin"
                android:padding="@dimen/editText_padding"
                android:hint="@string/date_of_purchase"
                android:textColorHint="@color/et_hint_color"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_seedType">

                <EditText
                    android:id="@+id/view_seed_seedDateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/et_text_color"
                    android:background="@drawable/edittext_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_moreAboutSeed"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/editText_margin"
                android:layout_marginEnd="@dimen/editText_margin"
                android:padding="@dimen/editText_padding"
                android:hint="@string/more_about_seed"
                android:textColorHint="@color/et_hint_color"
                app:hintTextColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_seedDate">

                <EditText
                    android:id="@+id/view_seed_moreAboutSeedEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/et_text_color"
                    android:background="@drawable/edittext_background" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.example.faceplant.utils.FaceplantButton
                android:id="@+id/view_seed_updateButton"
                style="@style/FaceplantSmallButton"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/faceplant_blue_button"
                android:text="@string/update"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/view_seed_removeButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_moreAboutSeed" />

            <com.example.faceplant.utils.FaceplantButton
                android:id="@+id/view_seed_removeButton"
                style="@style/FaceplantSmallButton"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/faceplant_red_button"
                android:text="@string/romove"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/view_seed_updateButton"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_moreAboutSeed" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>